crates/uitest/fixtures/mir_check/let_pattern_owned_view_param.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/let_pattern_owned_view_param.fe
---
error[10-0002]: move conflict in `fn let_pattern_owned_view_param`
  ┌─ let_pattern_owned_view_param.fe:6:21
  │
6 │     let Foo { x } = foo
  │                     ^^^ cannot move out of a view parameter
